objects/Relationship__c.object
<CustomObject>
    <description>Relationship records for relationship widget.Keeps relationships  between contact account,account contact,account account,contact contact.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Leave blank if no end.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Relationship_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Relationship Type</label>
        <referenceTo>Relationship_Type__c</referenceTo>
        <relationshipLabel>Relationships (First Relationship Type)</relationshipLabel>
        <relationshipName>First_Relationship_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Account_ID_dupe_check__c</fullName>
        <description>Pulls PG Account ID (18 digit, case insensitive) on to the Relationship record, so that the correct Key Relationship record can be identified during deduping</description>
        <formula>CASESAFEID( From_Individual__r.Account.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Account ID (dupe check)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Contact_ID__c</fullName>
        <formula>From_Individual__r.Id</formula>
        <label>From Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Contact_ID_dupe_check__c</fullName>
        <formula>CASESAFEID(From_Individual__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Contact ID (dupe check)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pick only ONE &quot;From&quot;, either Institution or Individual</inlineHelpText>
        <label>From Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships (From Individual)</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pick only ONE &quot;From&quot;, either Institution OR Individual.</inlineHelpText>
        <label>From Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (From Institution)</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Relationship_Entity__c</fullName>
        <label>From Relationship Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Institution</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a KEY relationship? Used in reports.</inlineHelpText>
        <label>Key Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_name_letters_dupe_checking__c</fullName>
        <formula>LEFT( To_Individual__r.LastName , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last name letters (dupe checking)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Overwrite__c</fullName>
        <formula>IF( From_Individual__r.RecordTypeId = &apos;012C0000000QaYz&apos; , &apos;Full&apos;,  
IF( To_Individual__r.RecordTypeId = &apos;012C0000000QaYz&apos; , &apos;Full&apos;, &apos;None&apos;) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS Overwrite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Relationship_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Relationship Type</label>
        <referenceTo>Relationship_Type__c</referenceTo>
        <relationshipLabel>Second Relationship Type</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <inlineHelpText>When did this relationship start?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Account_ID_dupe_check__c</fullName>
        <description>Pulls YP Account ID (18 digit, case insensitive) on to the Relationship record, so that the correct Key Relationship record can be identified during deduping</description>
        <formula>CASESAFEID(To_Individual__r.Account.Id)</formula>
        <label>To Account ID (dupe check)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Contact_ID__c</fullName>
        <formula>To_Individual__r.Id</formula>
        <label>To Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Contact_ID_dupe_check__c</fullName>
        <formula>CASESAFEID(To_Individual__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Contact ID (dupe check)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships (To Individual)</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pick only ONE To, either Institution OR Individual.</inlineHelpText>
        <label>To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (To Institution)</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Relationship_Entity__c</fullName>
        <label>To Relationship Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <formula>To_Individual__r.Assigned_Wave__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Duplicate Check trigger dc3RelationshipsTrigger</description>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>First_Relationship_Type__c</columns>
        <columns>Second_Relationship_Type__c</columns>
        <columns>To_Individual__c</columns>
        <columns>From_Individual__c</columns>
        <columns>To_Institution__c</columns>
        <columns>From_Institution__c</columns>
        <columns>To_Relationship_Entity__c</columns>
        <columns>From_Relationship_Entity__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/14/2016 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Relationship_Management_View</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>To_Contact_ID__c</field>
            <operation>equals</operation>
            <value>003C0000021E5js</value>
        </filters>
        <filters>
            <field>From_Contact_ID__c</field>
            <operation>equals</operation>
            <value>003C0000021E5js</value>
        </filters>
        <label>Relationship Management View</label>
    </listViews>
    <listViews>
        <fullName>Test_issue</fullName>
        <columns>NAME</columns>
        <columns>To_Contact_ID_dupe_check__c</columns>
        <columns>From_Contact_ID_dupe_check__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>From_Individual__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>To_Contact_ID__c</field>
            <operation>equals</operation>
            <value>003C000001pljwS</value>
        </filters>
        <label>Test issue</label>
    </listViews>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>